test/Fail/Issue4638-4.err
Issue4638-4.agda:13.1-14.11: error: [SplitError.ErasedDatatype.SeveralConstructors]
Cannot branch on erased argument of datatype D
when checking the definition of f
